# JoPhi-AI-generate

./: .gitattributes  .gitignore  LICENSE.md  README.md  app.py  backup-models.sh  generate.py  progress.py  requirements.txt  revoicer.py  setup.sh
.claude/: launch.json  settings.local.json
ace_worker/: generate.py  install.sh
diarize_worker/: diarize.py  install.sh
enhance_worker/: enhance.py  install.sh  patch_deepspeed_stub.py
langdetect_worker/: detect.py  install.sh
licenses/: ace.md  ace_worker.md  depth.md  diarize.md  diarize_worker.md  enhance.md  enhance_worker.md  flask.md  flux2.md  langdetect.md  lineart.md  ltx2.md  music.md  normalmap.md  openpose.md  rvc.md  rvc_worker.md  sd15.md  segment.md  separate.md  separate_worker.md  sfx.md  sketch.md  text.md  tts.md  tts_worker.md  upscale.md  whisper.md
misc/: MBEDIT - KJ-wip-ltx2_extension_testing_vrs5.json  MBEDIT-LTX-2_V2V_Extend_RuneXX_Vrs5.json  frame-picker-2.py  frame-picker.html  frame-picker.py  img2png.py  mask-editor.html  ratios.py  starfall.py  transnet-v2-recherche.md
model/: kokoro.onnx
music_worker/: install.sh
rvc_worker/: start.sh
worker/ltx2/ltx-core/: pyproject.toml
worker/ltx2/ltx-core/src/ltx_core/model/transformer/: attention.py  model.py
worker/ltx2/ltx-pipelines/: pyproject.toml
worker/ltx2/ltx-pipelines/src/ltx_pipelines/: a2vid_two_stage.py  distilled.py  ic_lora.py  keyframe_interpolation.py  retake.py  ti2vid_one_stage.py  ti2vid_two_stages.py  ti2vid_two_stages_hq.py
worker/ltx2/ltx-pipelines/src/ltx_pipelines/utils/: helpers.py  media_io.py  samplers.py
(+433 files in other folders)
