[project]
name = "ltx-core"
version = "1.0.0"
description = "Core implementation of Lightricks' LTX-2 model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "einops==0.8.2",
    "numpy==2.4.3",
    "transformers==4.52.4",
    "safetensors==0.7.0",
    "accelerate==1.13.0",
    "scipy==1.17.1",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
